--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wixc3/react-board": "^4.0.0"
   }
 }
