--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,28 @@
-# Base image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-WORKDIR /app
-EXPOSE 80
-
-# Build stage
+# Use the official .NET Core SDK as a parent image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /src
-COPY ["server/server.csproj", "server/"]
-RUN dotnet restore "server/server.csproj"
-COPY server/. ./server/
-WORKDIR "/src/server"
-RUN dotnet build "server.csproj" -c Release -o /app/build
-
-# Publish stage
-FROM build AS publish
-RUN dotnet publish "server.csproj" -c Release -o /app/publish
-
-# Final stage
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish ./
+
+
+# Copy the project file and restore any dependencies (use .csproj for the project name)
+COPY ./server/*.csproj ./
+RUN dotnet restore
+
+# Copy the rest of the application code
+COPY ./server .
+
+# Publish the application
+RUN dotnet publish -c Release -o out
+
+# Build the runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
+WORKDIR /app
+COPY --from=build /app/out ./
+
+# Expose the port your application will run on
+EXPOSE 5076
+# Turn on development environment for swagger API
+ENV ASPNETCORE_URLS http://*:5076
+ENV ASPNETCORE_ENVIRONMENT=Development
+
+# Start the application
 ENTRYPOINT ["dotnet", "server.dll"]
