--- a/server/server.Tests/server.Tests.csproj
+++ b/server/server.Tests/server.Tests.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="xunit" Version="2.9.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.35" />
