--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.58",
     "@mui/material": "^6.1.1",
     "@wixc3/react-board": "^4.0.0",
     "axios": "^1.7.7",
