Added JWT authentication and authorization, extended swagger.
JWT authentication and authorization. Extended Swagger and made with authorize. Fix user database.
Note: locally in secrets/.env you have to add a custom JWT_SECRET variable for generating JWT tokens.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,5 @@ services:
     env_file:
       - ./server/server/secrets/.env
     entrypoint: ["dotnet", "server.dll"]
-    
+    environment:
+      - TZ=UTC
