--- a/server/server/appsettings.Development.json
+++ b/server/server/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "FlashRead",
+    "Audience": "FlashReadClients",
+    "ExpirationHours": 1
   }
 }
