--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "FlashRead",
+    "Audience": "FlashReadClients",
+    "ExpirationHours": 1
+  }
 }
