--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.1",
     "@wixc3/react-board": "^4.0.0",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
