--- a/client/wasm/Makefile
+++ b/client/wasm/Makefile
@@ -1,4 +1,5 @@
 build-obj:
-	clang++ -o objpacker/objpacker objpacker/main.cpp \
+	C:\msys64\ucrt64\bin\g++ -o objpacker/objpacker objpacker/main.cpp \
 	-I dependencies/glm/include \
+	-std=c++17 \
 	&& objpacker/objpacker
